[package]
name = "spotify-image-search"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
audiotags = "0.5.0"
dotenvy = "0.15.7"
reqwest = "0.12.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
clap = { version = "4", features = ["derive"] }
walkdir = "2.5.0"
thiserror = "2.0.9"
text-sanitizer = "1.6.0"
edit-distance = "2.1.3"
